package org.cathedral.heuristics;

import de.fhkiel.ki.cathedral.game.Placement;

public record PlacementScore(Placement placement, double score) {
}
